2001-11-18  Thomas Flynn <tflynn@users.sourceforge.net>

	* Add JSAI classes to Doxygen list.

	* Readd exception classes to script.jar for JSAI.

	* Add additional javadoc comments to java files.

	* Implement 13 more methods in ScriptJDK. Only 8 left!

2001-11-11  Braden McDaniel  <braden@endoframe.com>

        * Move doc-comments to implementation files for VrmlBVolume,
          VrmlAABox, and VrmlBSphere.

        * Use dynamic_cast instead of VrmlBVolume::toBSphere() and
          VrmlBVolume::toAABox().

2001-11-05  Thomas Flynn <tflynn@users.sourceforge.net>

	* Implement 6 more methods in ScriptJDK.cpp

	* Attempt to conform to coding standard for line length.

2001-11-01  Braden McDaniel  <braden@endoframe.com>

        * Some minor improvements to VrmlNodePtr.

        * Use VrmlNode * instead of VrmlNodePtr to store references to
          named nodes in VrmlNamespace. This avoids a circular reference
          (and should fix that annoying crash on exit).

2001-10-30  S. K. Bose  <bose@pavan.barc.ernet.in>

        * Improve Navigation in "Examine Mode". Navigation speed is
          taken care.

2001-10-27  Braden McDaniel  <braden@endoframe.com>

        * Give up on trying to predict where the SpiderMonkey headers
          live. Users should supply this in CPPFLAGS when running
          configure.

        * In VrmlNodePtr constructor: assert that the value returned
          in the insertion result matches the argument VrmlNode *.

        * Clean up VrmlNodePtr::dispose().

        * Fixed crash on exit in VrmlNodePtr::dispose().

        * Using erase() instead of remove() for the node lists in
          VrmlScene is more efficient and avoids a crash on exit.

2001-10-17  S. K. Bose  <bose@pavan.barc.ernet.in>

        * Fixes for bug #213579. Problem on invariant background under
          all viewpoint transformations.

2001-10-17  Braden McDaniel  <braden@endoframe.com>
