@@ -1,3 +1,8 @@
+2001-11-19  Braden McDaniel  <braden@endoframe.com>
+
+        * Replace ScriptObject with Script. Script has methods that more
+	  directly reflect the functionality expected of scripts.
+
 2001-11-18  Thomas Flynn <tflynn@users.sourceforge.net>
 
 	* Add JSAI classes to Doxygen list.
